--- a/src/assets/less/main/classesSpace.less
+++ b/src/assets/less/main/classesSpace.less
@@ -34,92 +34,22 @@
     }
 }
 .classesInfo{
-    padding: 0 20px;
-
-    .title{
-        height: 62px;
-        
-        span{
-            margin-top: 28px;
-            margin-left: 16px;
-            font-size: 16px;
-            font-weight: normal;
-            cursor: pointer;
-        }
-        span:hover {
-            border-bottom: 1px solid #333;
-        }
-        .el-input{
-            width: 300px;
-            float: left;
-            margin: 12px 0 0 30px;
-        }
-        .el-input__inner{
-            font-weight: bold;
-        }
-        // .el-input__inner:focus{
-        //     border: 1px solid #333;
-        // }
-
-
-    }
+    display: flex;
+    
     h2{
-        float: left;
-        margin: 20px 0 10px 40px;
-        color: #333;
-
-        
+        width: 30%;
     }
-    .editClasses{
-        float: left;
+    .details{
+        width: 70%;
     }
-    .item{
-        float: left;
-        margin: 10px 30px 10px 0;
 
-
-        span{
-            margin-right: 6px;
-            font-size: 14px;
-            font-weight: bold;
-            color: #333;
-        }
-    }        
-    .joinWay{
-        width: 250px;
-        margin-top: 13px;
-
-        div{
-            margin-top: -2px;
-            float: right;
-        }
-        .joinWayRadio{
-            float: right;
-            width: 150px;
-        }
-        .el-radio{
-            margin: 4px 0;
-        }
-        .el-radio__label{
-            font-weight: normal;
-        }
+    ul{
+        height: 100%;
+        display: flex;
+        align-items: center;
     }
-    .introduction{
-        float: none;
-        clear: both;
-
-        .title{
-            cursor: pointer;
-        }
-        .con{
-            max-width: 850px;
-            margin-top: 4px;
-            margin-left: 40px;
-        }
-        i.active{
-            transform: rotate(180deg);
-        }
-        
+    ul li {
+        padding-right: 24px;
     }
 }
 //表格居中
