--- a/src/assets/less/testPaper.less
+++ b/src/assets/less/testPaper.less
@@ -395,6 +395,35 @@ html {
     color: #409EFF;
 }
 
+.topic-nav-button.correct,
+.topic-nav-but.correct{
+    background:#02c39a !important;
+    border:1px solid #02c39a !important;
+    color: #fff !important;
+}
+.topic-nav-button.error,
+.topic-nav-but.error{
+    background: #ff6b6b;
+    border:1px solid #ff6b6b !important;
+    color: #fff !important;
+
+}
+
+.test-content.publishScore .el-radio.is-disabled.is-checked .el-radio__input.is-disabled + span.el-radio__label, 
+.test-content.publishScore .el-checkbox.is-disabled.is-checked .el-checkbox__input.is-disabled + span.el-checkbox__label{
+    color: #ff6b6b;
+}
+
+.el-radio.is-disabled.is-checked.correct .el-radio__input.is-disabled + span.el-radio__label, 
+.el-checkbox.is-disabled.is-checked.correct .el-checkbox__input.is-disabled + span.el-checkbox__label{
+    color: #02c39a !important;
+}
+
+
+.topic-content .correct .el-radio__label{
+    color: #02c39a !important;
+}
+
 
 .testPaper .forbid_copy {
     -moz-user-select: none;
