--- a/src/assets/less/main/classeslist.less
+++ b/src/assets/less/main/classeslist.less
@@ -11,6 +11,8 @@
         background: #fff;   
         padding: 12px 24px;
         border-radius: 4px;   
+        height: 60px;
+        box-sizing: border-box;
         box-shadow: 0 2px 4px 0 rgb(0 0 0 / 12%), 0 0 6px 0 rgb(0 0 0 / 4%);
     }
     .list-header.isFixed{
@@ -64,6 +66,7 @@
         display: inline-block;
         margin-right: 30px;
         font-size: 18px;
+        line-height: 36px;
     }
 
 
@@ -71,7 +74,13 @@
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
-        // background: #f4f4f4;        
+        // background: #f4f4f4;  
+        
+        h4{
+            width: 100%;
+            text-align: center;
+            color: #666;
+        }
     }
     .class-box:last-child{
         // margin: 20px 0;
@@ -82,6 +91,7 @@
         position: relative;
         width: 46%;
         min-width: 600px;
+        min-height: 250px;
         background: #fff;
         border-radius: 6px;
         padding: 0 24px;
@@ -112,7 +122,6 @@
             right: 48px;
             top: 70px;
             width: 120px;
-            height: 173px;
             display: flex;
             justify-content: center;
             align-content: space-around;
@@ -128,6 +137,7 @@
         .info{
             border-top: 1px solid #e4e4e4;
             padding: 12px 0;
+            color: #666;
         }
         .info-row{
             display: flex;
