--- a/src/assets/less/main/classesSpace.less
+++ b/src/assets/less/main/classesSpace.less
@@ -8,6 +8,10 @@
     .el-dialog__body{
         text-align: center;
     }
+    .el-dialog__body .el-switch{
+        display: block;
+        margin: 24px 0;
+    }
 
     .el-divider--horizontal{
         background-color: #444;
