--- a/src/assets/less/main/classeslist.less
+++ b/src/assets/less/main/classeslist.less
@@ -8,7 +8,7 @@
     
     .list-header{
         position: relative;
-        background: #fff;   
+        background: #fafafa;   
         padding: 12px 24px;
         border-radius: 4px;   
         height: 60px;
@@ -24,7 +24,7 @@
     }
 
     .list-header .createClasses{
-        background: #666;
+        background: #4788cc;
         color: #fff;
         border-color: #f6f6f6;
         transition: 1s;
@@ -52,13 +52,9 @@
         border-color: #999;
     }
     .enterClasses .el-button{
-        background: #666;
-        border-color: #666;
+        background: #4788cc;
+        border-color: #4788cc;
         transition: 1s;
-    }
-    .enterClasses .el-button:hover{
-        background: #333;
-
     }
 
 
@@ -92,7 +88,7 @@
         width: 46%;
         min-width: 600px;
         min-height: 250px;
-        background: #fff;
+        background: #fafafa;
         border-radius: 6px;
         padding: 0 24px;
         margin: 24px 2% 0 2%;
