--- a/src/assets/less/my_tab.less
+++ b/src/assets/less/my_tab.less
@@ -19,7 +19,7 @@
         padding: 0 16px;
         height: 40px;
         line-height: 40px;
-        background: #333;
+        background: #29527c;
         color: #fff;
         border: 1px solid #f7f7f7;
         font-size: 16px;
@@ -49,7 +49,7 @@
     }
     .tabTitle-item.active{
         background: #f7f7f7;
-        color: #333;
+        color: #001133;
 
         
     }
@@ -79,7 +79,7 @@
         border-color: #000;
     }
     .classesNameInput .el-button{
-        background: #333;
+        background: #29527c;
         color: #fff;
         border-color: #f6f6f6;
     }
