--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -21,13 +21,23 @@
     .person{
         float: right;
         margin-right: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         .img{
             float: left;
-            margin: 10px 10px 0 0;
-            width: 30px;
-            height: 30px;
+            margin-right: 10px;
+            width: 40px;
+            height: 40px;
             background: #eee;
             border-radius: 50%;
+            overflow: hidden;
+        }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         .name{
             height: 50px;
@@ -48,12 +58,12 @@
         text-align: center;
         line-height: 48px;
         font-size: 16px;
-        background: #333;
+        background: #336699;
         z-index: 999;
         cursor: pointer;
         
         .item:hover{
-            background: #272727;
+            background: #29527c;
         }
     }
     
