--- a/src/assets/less/my_tab.less
+++ b/src/assets/less/my_tab.less
@@ -19,7 +19,7 @@
         padding: 0 16px;
         height: 40px;
         line-height: 40px;
-        background: #29527c;
+        background: #336699;
         color: #fff;
         border: 1px solid #f7f7f7;
         font-size: 16px;
