--- a/src/assets/less/main/me.less
+++ b/src/assets/less/main/me.less
@@ -18,6 +18,7 @@
     .avatar-uploader{
         margin-top: 120px;
         height: 214px;
+        width: 45%;
     }
     .el-upload{
         width: 100%;
